target/generated-sources/antlr4/com/dictationParser/DictationParserParser.java
package com.dictationParser;
// Generated from DictationParser.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DictationParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		METHOD=1, FUNCTION=2, CONSTRUCTOR=3, FIELD=4, BLOCK=5, INSIDE=6, IN=7, 
		AFTER=8, BEFORE=9, ABOVE=10, BELOW=11, INNER=12, OF_TYPE=13, NEW=14, NAMED=15, 
		CALLED=16, LINE=17, NUMBER=18, OPTION=19, AN=20, A=21, THAT_ACCEPTS=22, 
		WITH=23, AND=24, OR=25, TO=26, FROM=27, GO_TO=28, EXIT=29, QUIT=30, WE_ARE_DONE_WITH=31, 
		MAKE_IT=32, CHANGE_IT=33, CREATE=34, OPEN=35, OPEN_PARENTHESES=36, CALL=37, 
		OF=38, PERIOD=39, PERIOD_CHAR=40, DELETE=41, REMOVE=42, ASSIGN=43, PLUS=44, 
		MATH_PLUS=45, MINUS=46, MATH_MINUS=47, IS=48, IS_NOT=49, IS_EQUAL_TO=50, 
		EQUAL_TO=51, EQUALS_TO=52, EQUALS=53, IS_EQUALS=54, IS_DIFFERENT_FROM=55, 
		DIFFERENT_FROM=56, LESS_THAN=57, LESS_THAN_MATH=58, IS_LESS_THAN=59, IS_LESS_THAN_EQUAL=60, 
		IS_LESS_THAN_EQUALS=61, LESS_THAN_EQUAL=62, LESS_THAN_EQUALS=63, LESS_THAN_EQUAL_MATH=64, 
		LESS_THAN_EQUAL_MATH_SPACE=65, GREATER_THAN=66, GREATER_THAN_MATH=67, 
		IS_GREATER_THAN=68, GREATER_THAN_EQUAL=69, GREATER_THAN_EQUAL_MATH=70, 
		GREATER_THAN_EQUAL_MATH_SPACE=71, IF=72, THEN=73, ABSTRACT=74, ASSERT=75, 
		CATCH=76, CLASS=77, CONST=78, DO=79, ELSE=80, ENUM=81, EXTENDS=82, EXTEND=83, 
		THAT_EXTENDS=84, FINAL=85, FOR=86, IMPLEMENTS=87, THAT_IMPLEMENTS=88, 
		IMPLEMENT=89, INTERFACE=90, PRIVATE=91, PROTECTED=92, PUBLIC=93, STATIC=94, 
		SUPER=95, THROW=96, THROWS=97, TRANSIENT=98, TRY=99, VOID=100, VOLATILE=101, 
		WHILE=102, FOR_EACH=103, FOR_EACH_SPACE=104, THAT_RETURNS=105, RETURNS=106, 
		RETURN=107, SWITCH=108, SYNCHRONIZED=109, STRICTFP=110, NATIVE=111, PACKAGE=112, 
		IMPORT=113, INSTANCEOF=114, FINALLY=115, CONTINUE=116, DEFAULT=117, BREAK=118, 
		CASE=119, IN_CASE=120, ZERO=121, ONE=122, TWO=123, THREE=124, FOUR=125, 
		FIVE=126, SIX=127, SEVEN=128, EIGHT=129, NINE=130, WS=131, Number=132, 
		Element=133;
	public static final int
		RULE_command = 0, RULE_creationCommand = 1, RULE_creationVerb = 2, RULE_createField = 3, 
		RULE_createMethod = 4, RULE_createConstructor = 5, RULE_createDataType = 6, 
		RULE_createBlock = 7, RULE_createBlockStatement = 8, RULE_createLoop = 9, 
		RULE_createForEachLoop = 10, RULE_createWhileLoop = 11, RULE_createDoWhileLoop = 12, 
		RULE_createForLoop = 13, RULE_navigationCommand = 14, RULE_navigationVerb = 15, 
		RULE_exitCommand = 16, RULE_exit = 17, RULE_modificationCommand = 18, 
		RULE_modifyAccessLevel = 19, RULE_modificationVerb = 20, RULE_selectionCommand = 21, 
		RULE_deletionCommand = 22, RULE_invocationCommand = 23, RULE_fieldModifier = 24, 
		RULE_variableModifier = 25, RULE_modifier = 26, RULE_accessLevel = 27, 
		RULE_localVariableDeclaration = 28, RULE_statement = 29, RULE_expression = 30, 
		RULE_primary = 31, RULE_elementsElement = 32, RULE_elementLocation = 33, 
		RULE_fieldRef = 34, RULE_elementRef = 35, RULE_classRef = 36, RULE_namedElement = 37, 
		RULE_elementsName = 38, RULE_enumRef = 39, RULE_interfaceRef = 40, RULE_unspecifiedRef = 41, 
		RULE_reference = 42, RULE_locationRef = 43, RULE_parametersList = 44, 
		RULE_parameter = 45, RULE_dataType = 46, RULE_line = 47, RULE_number = 48, 
		RULE_returnsVars = 49, RULE_implementsVars = 50, RULE_extendsVars = 51, 
		RULE_plusVars = 52, RULE_minusVars = 53, RULE_equalsVars = 54, RULE_isDifferentVars = 55, 
		RULE_lessThanVars = 56, RULE_lessThanEqualsVars = 57, RULE_greaterThanVars = 58, 
		RULE_greaterThanEqualVars = 59, RULE_forEachVars = 60, RULE_caseVars = 61, 
		RULE_periodVars = 62;
	public static final String[] ruleNames = {
		"command", "creationCommand", "creationVerb", "createField", "createMethod", 
		"createConstructor", "createDataType", "createBlock", "createBlockStatement", 
		"createLoop", "createForEachLoop", "createWhileLoop", "createDoWhileLoop", 
		"createForLoop", "navigationCommand", "navigationVerb", "exitCommand", 
		"exit", "modificationCommand", "modifyAccessLevel", "modificationVerb", 
		"selectionCommand", "deletionCommand", "invocationCommand", "fieldModifier", 
		"variableModifier", "modifier", "accessLevel", "localVariableDeclaration", 
		"statement", "expression", "primary", "elementsElement", "elementLocation", 
		"fieldRef", "elementRef", "classRef", "namedElement", "elementsName", 
		"enumRef", "interfaceRef", "unspecifiedRef", "reference", "locationRef", 
		"parametersList", "parameter", "dataType", "line", "number", "returnsVars", 
		"implementsVars", "extendsVars", "plusVars", "minusVars", "equalsVars", 
		"isDifferentVars", "lessThanVars", "lessThanEqualsVars", "greaterThanVars", 
		"greaterThanEqualVars", "forEachVars", "caseVars", "periodVars"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'method'", "'function'", "'constructor'", "'field'", "'block'", 
		"'inside'", "'in'", "'after'", "'before'", "'above'", "'below'", "'inner'", 
		"'of type'", "'new'", "'named'", "'called'", "'line'", "'number'", "'option'", 
		"'an'", "'a'", "'that accepts'", "'with'", "'and'", "'or'", "'to'", "'from'", 
		"'go to'", "'exit'", "'quit'", "'we are done with'", "'make it'", "'change it to'", 
		"'create'", "'open'", "'open parentheses'", "'call'", "'of'", "'period'", 
		"'.'", "'delete'", "'remove'", "'assign'", "'plus'", "'+'", "'minus'", 
		"'-'", "'is'", "'is not'", "'is equal to'", "'equal to'", "'equals to'", 
		"'equals'", "'is equals'", "'is different from'", "'different from'", 
		"'less than'", "'<'", "'is less than'", "'is less than equal'", "'is less than equals'", 
		"'less than equal'", "'less than equals'", "'<='", "'< ='", "'greater than'", 
		"'>'", "'is greater than'", "'greater than equal'", "'>='", "'> ='", "'if'", 
		"'then'", "'abstract'", "'assert'", "'catch'", "'class'", "'const'", "'do'", 
		"'else'", "'enum'", "'extends'", "'extend'", "'that extends'", "'final'", 
		"'for'", "'implements'", "'that implements'", "'implement'", "'interface'", 
		"'private'", "'protected'", "'public'", "'static'", "'super'", "'throw'", 
		"'throws'", "'transient'", "'try'", "'void'", "'volatile'", "'while'", 
		"'foreach'", "'for each'", "'that returns'", "'returns'", "'return'", 
		"'switch'", "'synchronized'", "'strictfp'", "'native'", "'package'", "'import'", 
		"'instanceof'", "'finally'", "'continue'", "'default'", "'break'", "'case'", 
		"'in case'", "'zero'", "'one'", "'two'", "'three'", "'four'", "'five'", 
		"'six'", "'seven'", "'eight'", "'nine'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "METHOD", "FUNCTION", "CONSTRUCTOR", "FIELD", "BLOCK", "INSIDE", 
		"IN", "AFTER", "BEFORE", "ABOVE", "BELOW", "INNER", "OF_TYPE", "NEW", 
		"NAMED", "CALLED", "LINE", "NUMBER", "OPTION", "AN", "A", "THAT_ACCEPTS", 
		"WITH", "AND", "OR", "TO", "FROM", "GO_TO", "EXIT", "QUIT", "WE_ARE_DONE_WITH", 
		"MAKE_IT", "CHANGE_IT", "CREATE", "OPEN", "OPEN_PARENTHESES", "CALL", 
		"OF", "PERIOD", "PERIOD_CHAR", "DELETE", "REMOVE", "ASSIGN", "PLUS", "MATH_PLUS", 
		"MINUS", "MATH_MINUS", "IS", "IS_NOT", "IS_EQUAL_TO", "EQUAL_TO", "EQUALS_TO", 
		"EQUALS", "IS_EQUALS", "IS_DIFFERENT_FROM", "DIFFERENT_FROM", "LESS_THAN", 
		"LESS_THAN_MATH", "IS_LESS_THAN", "IS_LESS_THAN_EQUAL", "IS_LESS_THAN_EQUALS", 
		"LESS_THAN_EQUAL", "LESS_THAN_EQUALS", "LESS_THAN_EQUAL_MATH", "LESS_THAN_EQUAL_MATH_SPACE", 
		"GREATER_THAN", "GREATER_THAN_MATH", "IS_GREATER_THAN", "GREATER_THAN_EQUAL", 
		"GREATER_THAN_EQUAL_MATH", "GREATER_THAN_EQUAL_MATH_SPACE", "IF", "THEN", 
		"ABSTRACT", "ASSERT", "CATCH", "CLASS", "CONST", "DO", "ELSE", "ENUM", 
		"EXTENDS", "EXTEND", "THAT_EXTENDS", "FINAL", "FOR", "IMPLEMENTS", "THAT_IMPLEMENTS", 
		"IMPLEMENT", "INTERFACE", "PRIVATE", "PROTECTED", "PUBLIC", "STATIC", 
		"SUPER", "THROW", "THROWS", "TRANSIENT", "TRY", "VOID", "VOLATILE", "WHILE", 
		"FOR_EACH", "FOR_EACH_SPACE", "THAT_RETURNS", "RETURNS", "RETURN", "SWITCH", 
		"SYNCHRONIZED", "STRICTFP", "NATIVE", "PACKAGE", "IMPORT", "INSTANCEOF", 
		"FINALLY", "CONTINUE", "DEFAULT", "BREAK", "CASE", "IN_CASE", "ZERO", 
		"ONE", "TWO", "THREE", "FOUR", "FIVE", "SIX", "SEVEN", "EIGHT", "NINE", 
		"WS", "Number", "Element"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DictationParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DictationParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CommandContext extends ParserRuleContext {
		public CreationCommandContext creationCommand() {
			return getRuleContext(CreationCommandContext.class,0);
		}
		public NavigationCommandContext navigationCommand() {
			return getRuleContext(NavigationCommandContext.class,0);
		}
		public SelectionCommandContext selectionCommand() {
			return getRuleContext(SelectionCommandContext.class,0);
		}
		public ModificationCommandContext modificationCommand() {
			return getRuleContext(ModificationCommandContext.class,0);
		}
		public DeletionCommandContext deletionCommand() {
			return getRuleContext(DeletionCommandContext.class,0);
		}
		public InvocationCommandContext invocationCommand() {
			return getRuleContext(InvocationCommandContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_command);
		try {
			setState(132);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				creationCommand();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				navigationCommand();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				selectionCommand();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				modificationCommand();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(130);
				deletionCommand();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(131);
				invocationCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreationCommandContext extends ParserRuleContext {
		public CreateFieldContext createField() {
			return getRuleContext(CreateFieldContext.class,0);
		}
		public CreateMethodContext createMethod() {
			return getRuleContext(CreateMethodContext.class,0);
		}
		public CreateConstructorContext createConstructor() {
			return getRuleContext(CreateConstructorContext.class,0);
		}
		public CreateDataTypeContext createDataType() {
			return getRuleContext(CreateDataTypeContext.class,0);
		}
		public CreateBlockContext createBlock() {
			return getRuleContext(CreateBlockContext.class,0);
		}
		public CreateLoopContext createLoop() {
			return getRuleContext(CreateLoopContext.class,0);
		}
		public CreationVerbContext creationVerb() {
			return getRuleContext(CreationVerbContext.class,0);
		}
		public ElementLocationContext elementLocation() {
			return getRuleContext(ElementLocationContext.class,0);
		}
		public TerminalNode AN() { return getToken(DictationParserParser.AN, 0); }
		public TerminalNode A() { return getToken(DictationParserParser.A, 0); }
		public CreationCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creationCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).enterCreationCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).exitCreationCommand(this);
		}
	}

	public final CreationCommandContext creationCommand() throws RecognitionException {
		CreationCommandContext _localctx = new CreationCommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_creationCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(134);
				creationVerb();
				}
				break;
			}
			setState(138);
			_la = _input.LA(1);
			if (_la==AN || _la==A) {
				{
				setState(137);
				_la = _input.LA(1);
				if ( !(_la==AN || _la==A) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
			}

			setState(146);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(140);
				createField();
				}
				break;
			case 2:
				{
				setState(141);
				createMethod();
				}
				break;
			case 3:
				{
				setState(142);
				createConstructor();
				}
				break;
			case 4:
				{
				setState(143);
				createDataType();
				}
				break;
			case 5:
				{
				setState(144);
				createBlock();
				}
				break;
			case 6:
				{
				setState(145);
				createLoop();
				}
				break;
			}
			setState(149);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(148);
				elementLocation();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreationVerbContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(DictationParserParser.CREATE, 0); }
		public TerminalNode NEW() { return getToken(DictationParserParser.NEW, 0); }
		public TerminalNode OPEN() { return getToken(DictationParserParser.OPEN, 0); }
		public CreationVerbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creationVerb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).enterCreationVerb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).exitCreationVerb(this);
		}
	}

	public final CreationVerbContext creationVerb() throws RecognitionException {
		CreationVerbContext _localctx = new CreationVerbContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_creationVerb);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEW) | (1L << CREATE) | (1L << OPEN))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateFieldContext extends ParserRuleContext {
		public FieldRefContext fieldRef() {
			return getRuleContext(FieldRefContext.class,0);
		}
		public FieldModifierContext fieldModifier() {
			return getRuleContext(FieldModifierContext.class,0);
		}
		public CreateFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).enterCreateField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).exitCreateField(this);
		}
	}

	public final CreateFieldContext createField() throws RecognitionException {
		CreateFieldContext _localctx = new CreateFieldContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if (((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & ((1L << (ABSTRACT - 74)) | (1L << (CONST - 74)) | (1L << (FINAL - 74)) | (1L << (PRIVATE - 74)) | (1L << (PROTECTED - 74)) | (1L << (PUBLIC - 74)) | (1L << (STATIC - 74)))) != 0)) {
				{
				setState(153);
				fieldModifier();
				}
			}

			setState(156);
			fieldRef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateMethodContext extends ParserRuleContext {
		public NamedElementContext namedElement() {
			return getRuleContext(NamedElementContext.class,0);
		}
		public TerminalNode METHOD() { return getToken(DictationParserParser.METHOD, 0); }
		public TerminalNode FUNCTION() { return getToken(DictationParserParser.FUNCTION, 0); }
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public ParametersListContext parametersList() {
			return getRuleContext(ParametersListContext.class,0);
		}
		public ReturnsVarsContext returnsVars() {
			return getRuleContext(ReturnsVarsContext.class,0);
		}
		public TerminalNode Element() { return getToken(DictationParserParser.Element, 0); }
		public TerminalNode THAT_ACCEPTS() { return getToken(DictationParserParser.THAT_ACCEPTS, 0); }
		public TerminalNode WITH() { return getToken(DictationParserParser.WITH, 0); }
		public CreateMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).enterCreateMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DictationParserListener ) ((DictationParserListener)listener).exitCreateMethod(this);
		}
	}
